--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -12254,6 +12254,8 @@ footer {
 .social-media-image-tile {
   padding: 5px;
   margin: 5px;
+  display: flex;
+  justify-content: center;
 }
 .social-media-image-tile img {
   max-height: 150px;
