--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAttendeesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAttendeesContent.cshtml
@@ -25,10 +25,7 @@
         responsesDictionary.TryGetValue(member.Id, out EventResponseType response);
 
         <div class="col text-center overlay-container mb-3">
-            @await Html.PartialAsync("Members/_MemberImage", new MemberImageViewModel(Model.Chapter, member)
-            {
-                MaxWidth = 100
-            })
+            @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel(Model.Chapter, member))
             <div>
                 <a href="/@Model.Chapter.Name/Admin/Members/@member.Id">@member.FullName</a>
             </div>
