--- a/ODK.Web.Razor/Views/Shared/Members/_MemberAvatar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_MemberAvatar.cshtml
@@ -1,11 +1,10 @@
 ﻿@model ODK.Web.Razor.Models.Members.MemberAvatarViewModel
 @{
-    var imageUrl = $"/{Model.Chapter.Name}/Members/{Model.Member.Id}/Avatar";    
+    var imageUrl = $"/{Model.Chapter.Name}/Members/{Model.Member.Id}/Avatar";
+    var maxWidth = Model.MaxWidth > 0 ? Model.MaxWidth : 75;
 }
 
-<div class="d-flex align-items-end justify-content-center">
-    <img style="@(Model.MaxWidth > 0 ? $"max-width: {Model.MaxWidth}px" : null)"
-         class="@(Model.IsTop ? "card-img-top" : "card-img")" 
-         src="@imageUrl" 
-         alt="Photo of @Model.Member.FullName" />
-</div>
+<img style="@(maxWidth > 0 ? $"max-width: {maxWidth}px" : null)"
+     class="@(Model.IsTop ? "card-img-top" : "card-img")"
+     src="@imageUrl"
+     alt="Photo of @Model.Member.FullName" />
