--- a/ODK.Web.Razor/Views/Shared/Account/_AccountContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountContent.cshtml
@@ -1,12 +1,16 @@
-﻿@using ODK.Web.Razor.Models.Account
+﻿@using ODK.Services.Members
+@using ODK.Web.Razor.Models.Account
+@using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Members
 @model ODK.Web.Razor.Models.Account.AccountContentViewModel
+@inject IMemberService MemberService
 @{
     if (!Model.CurrentMember.IsMemberOf(Model.Chapter.Id))
     {
         return;
     }
-    
+
+    var avatar = await MemberService.GetMemberAvatar(null, Model.CurrentMember.Id);
 }
 
 <div class="row row-cols-2">
@@ -26,7 +30,7 @@
         <div>
             <a href="/@Model.Chapter.Name/Account/Delete">Delete my account</a>
         </div>
-        <div class="mt-3" data-theme-selector-container>
+        <div class="my-3" data-theme-selector-container>
             <button type="button" class="d-flex align-items-center btn btn-outline-light d-none me-3"
                     data-theme-selector="light">
                 <i class="fa-solid fa-sun me-2"></i>
@@ -43,16 +47,15 @@
     <div class="col">
         <div class="form-group text-end">
             <div class="d-inline-block">
-                @await Html.PartialAsync("Members/_MemberImage", new MemberImageViewModel(Model.Chapter, Model.CurrentMember))
+                <div class="d-flex justify-content-end">
+                    @await Html.PartialAsync("Members/_MemberImage", new MemberImageViewModel(Model.Chapter, Model.CurrentMember))
+                </div>                
                 
                 <div class="d-flex justify-content-center">
                     <div class="d-flex">
-                        <form method="post" action="/@Model.Chapter.Name/Account/Picture/Change" enctype="multipart/form-data">
-                            <input id="picture-upload" name="files" class="d-none" type="file" accept="image/*" placeholder="Choose file" data-onchange="submit"/>
-                            <button class="btn btn-link" type="button" data-button-for="#picture-upload">
-                                Change picture
-                            </button>
-                        </form>
+                        <button class="btn btn-link" type="button" data-bs-toggle="modal" data-bs-target="#change-picture-modal">
+                            Change picture
+                        </button>                                                
 
                         <form class="d-flex align-items-center" method="post" action="/@Model.Chapter.Name/Account/Picture/Rotate">
                             <button class="btn-icon" data-bs-toggle="tooltip" data-bs-title="Rotate right">
@@ -65,6 +68,31 @@
         </div>
     </div>
 </div>
+
+@await Html.PartialAsync("Components/_Modal", new ModalViewModel
+{
+    Id = "change-picture-modal",
+    Title = "Change picture",
+    Size = "modal-lg",
+    Body =
+    @<div>
+        <form method="post" action="/@Model.Chapter.Name/Account/Picture/Change" enctype="multipart/form-data">
+            @await Html.PartialAsync("Account/_PictureUpload", new PictureUploadViewModel
+            {
+                Chapter = Model.Chapter,
+                CropHeight = avatar.Value?.CropHeight,
+                CropWidth = avatar.Value?.CropWidth,
+                CropX = avatar.Value?.CropX,
+                CropY = avatar.Value?.CropY,
+                MemberId = Model.CurrentMember.Id
+            })
+
+            <div class="d-flex justify-content-end mt-3">
+                <button class="btn btn-primary">Update</button>
+            </div>
+        </form>
+    </div>
+})
 
 <form method="post">
     @Html.AntiForgeryToken()
