--- a/ODK.Web.Razor/Views/Shared/Account/_SubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_SubscriptionContent.cshtml
@@ -5,6 +5,7 @@
 @using ODK.Services.Countries
 @using ODK.Services.Members
 @using ODK.Web.Razor.Models
+@using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Models.Account.SubscriptionContentViewModel
 @inject IChapterService ChapterService
 @{    
@@ -63,14 +64,11 @@
                     <button class="btn btn-primary mr-1" data-bs-toggle="modal" data-bs-target="#@modalId">Purchase</button>
                     <span>@country.CurrencySymbol@chapterSubscription.Amount.ToString("0.00")</span>
                     
-                    <div class="modal" tabindex="-1" id="@modalId">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title">@title</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
+                    @await Html.PartialAsync("Components/_Modal", new ModalViewModel
+                    {
+                        Id = modalId,
+                        Title = title,
+                        Body = @<div>
                                     @if (paymentSettings?.Provider == "PayPal")
                                     {
                                         <form method="post" action="/@Model.Chapter.Name/Account/Subscription/Purchase">
@@ -92,9 +90,7 @@
                                         </div>
                                     }
                                 </div>
-                            </div>
-                        </div>
-                    </div>
+                    })
                 </div>
             </div>
         </div>
