--- a/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
@@ -1,21 +1,19 @@
-﻿@using ODK.Services.Authentication
-@using ODK.Services.Events
+﻿@using ODK.Services.Events
+@using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Events
-@model ODK.Web.Razor.Models.Events.EventsContentViewModel
+@model EventsContentViewModel
 @inject IEventService EventService
 @{
     var events = await EventService.GetEventResponseViewModels(Model.Member, Model.Chapter);
 }
 
-@if (User.IsInRole(OdkRoles.Admin) && Model.Member?.IsMemberOf(Model.Chapter.Id) == true)
+@await Html.PartialAsync("Components/_AdminBar", new AdminBarViewModel
 {
-    <div class="mb-3">
-        <a href="/@Model.Chapter.Name/Admin/Events" class="btn btn-outline-secondary">
-            <i class="fa-solid fa-pen-to-square"></i>
-            Edit
-        </a>
-    </div>
-}
+    AdminLink = $"/{Model.Chapter.Name}/Admin/Events",
+    AdminLinkText = "Edit",
+    Chapter = Model.Chapter,
+    CurrentMember = Model.Member
+})
 
 @if (events.Count > 0)
 {
