--- a/ODK.Web.Razor/Views/Shared/Members/_ListMember.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_ListMember.cshtml
@@ -4,12 +4,14 @@
 <div class="card member-tile @(Model.HideName ? "member-tile-sm" : null)">
     <a href="/@Model.Chapter.Name/Knitwits/@Model.Member.Id" 
        data-bs-toggle="@(Model.HideName ? "tooltip" : "")" data-bs-title="@(Model.HideName ? Model.Member.FullName : "")" container="body">
-        @await Html.PartialAsync("Members/_MemberImage", new MemberImageViewModel(Model.Chapter, Model.Member)
-        {
-            ImageHeight = Model.ImageHeight,
-            IsTop = !Model.HideName,
-            MaxWidth = Model.MaxWidth,
-        })
+
+        <div class="d-flex align-items-end justify-content-center">
+           @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel(Model.Chapter, Model.Member)
+            {
+                IsTop = !Model.HideName,
+                MaxWidth = Model.MaxWidth
+            })
+        </div>
             
         @if (!Model.HideName)
         {
