--- a/ODK.Web.Razor/Views/Shared/Members/_MemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_MemberContent.cshtml
@@ -1,9 +1,23 @@
-﻿@using ODK.Web.Razor.Models.Members
+﻿@using ODK.Services.Authentication
+@using ODK.Services.Members
+@using ODK.Web.Razor.Models.Components
+@using ODK.Web.Razor.Models.Members
 @model ODK.Web.Razor.Models.Members.MemberContentViewModel
+@inject IMemberService MemberService
+
+@await Html.PartialAsync("Components/_AdminBar", new AdminBarViewModel
+{
+    AdminLink = $"/{Model.Chapter.Name}/Admin/Members/{Model.Member.Id}",
+    AdminLinkText = "Edit",
+    Chapter = Model.Chapter,
+    CurrentMember = Model.CurrentMember
+})
 
 <div class="row">
     <div class="col-md-4 text-right order-md-2">
-        @await Html.PartialAsync("Members/_MemberImage", new MemberImageViewModel(Model.Chapter, Model.Member))
+        <div class="d-flex align-items-end justify-content-end">
+            @await Html.PartialAsync("Members/_MemberImage", new MemberImageViewModel(Model.Chapter, Model.Member))        
+        </div>
     </div>
     <div class="col-md-8 order-md-1">
         @await Html.PartialAsync("Members/_MemberProfile", 
