fallback member images

--- a/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@title</title>
 
+    <script src="~/js/odk.global.js"></script>
     <script src="~/js/odk.themes.js"></script>
 
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon.png">
