--- a/ODK.Web.Razor/Views/Shared/Account/_ChangeEmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChangeEmailContent.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ODK.Web.Razor.Models.Account
 @model ODK.Web.Razor.Models.Account.ChangeEmailContentViewModel
 
-<form method="post" action="/@Model.Chapter.Name/Account/Email/Change">
+<form method="post" action="/@Model.ChapterName/Account/Email/Change">
     @Html.AntiForgeryToken()
     
     <div class="form-group mb-3">
