--- a/ODK.Web.Razor/Views/Shared/Account/_PictureUpload.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_PictureUpload.cshtml
@@ -6,7 +6,7 @@
 @{
     var memberId = User.MemberIdOrDefault();
     var imageSrc = memberId != null
-        ? $"/{Model.Chapter.Name}/Members/{memberId}/Image"
+        ? $"/{Model.ChapterName}/Members/{memberId}/Image"
         : null;
 }
 
