--- a/ODK.Web.Razor/Views/Shared/Account/_EmailPreferencesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_EmailPreferencesContent.cshtml
@@ -4,7 +4,7 @@
 {
     <div class="alert alert-success">You are currently receiving event emails.</div>
 
-    <form method="post" action="/@Model.Chapter.Name/Account/Emails/Unsubscribe">
+    <form method="post" action="/@Model.ChapterName/Account/Emails/Unsubscribe">
         <button class="btn btn-danger" type="submit"
                 onclick="return confirm('Are you sure you want to stop receiving event emails?');">
             Unsubscribe
@@ -18,7 +18,7 @@ else
 {
     <div class="alert alert-danger">You have chosen not to receive event emails.</div>
 
-    <form method="post" action="/@Model.Chapter.Name/Account/Emails/Subscribe">
+    <form method="post" action="/@Model.ChapterName/Account/Emails/Subscribe">
         <button class="btn btn-success" type="submit">
             Subscribe
         </button>
