--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAttendeesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAttendeesContent.cshtml
@@ -30,7 +30,11 @@
 
         <div class="col text-center overlay-container mb-3">
             <div class="d-flex align-items-end justify-content-center">
-                @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel(Model.Chapter, member))
+                @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
+                {
+                    ChapterName = Model.Chapter.Name,
+                    Member = member
+                })
             </div>
             <div>
                 <a href="/@Model.Chapter.Name/Admin/Members/@member.Id">@member.FullName</a>
