--- a/ODK.Web.Razor/Views/Shared/Members/_MemberAvatar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_MemberAvatar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ODK.Web.Razor.Models.Members.MemberAvatarViewModel
 @{
-    var imageUrl = $"/{Model.Chapter.Name}/Members/{Model.Member.Id}/Avatar";
+    var imageUrl = $"/{Model.ChapterName}/Members/{Model.Member.Id}/Avatar";
     var maxWidth = Model.MaxWidth > 0 ? Model.MaxWidth : 75;
 }
 
