--- a/ODK.Web.Razor/Views/Shared/Components/_FeatureTooltip.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_FeatureTooltip.cshtml
@@ -19,7 +19,7 @@
     var description = feature.Description.Replace("{chapter.name}", chapter?.Name ?? "");
 }
 
-<div class="ml-1 d-inline"
+<div class="ms-1 d-inline"
    data-bs-toggle="popover" 
    data-bs-container="body"
    data-bs-html="true"
