--- a/ODK.Web.Razor/Views/Shared/Components/_Tooltip.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Tooltip.cshtml
@@ -1,4 +1,4 @@
 ﻿@model string
 
-<i class="ml-1 icon--help fas fa-question-circle" 
+<i class="ms-1 icon--help fas fa-question-circle" 
    data-bs-toggle="tooltip" data-bs-title="@Model"></i>
