--- a/ODK.Web.Razor/Views/Shared/Account/_ProfileForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ProfileForm.cshtml
@@ -30,7 +30,7 @@
     }
     else
     {
-        <span class="ml-1 text-muted">You will need access to this email to verify your account</span>
+        <span class="ms-1 text-muted">You will need access to this email to verify your account</span>
         @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", type = "Email" })
         @Html.ValidationMessageFor(x => x.EmailAddress)
     }
@@ -46,7 +46,7 @@
             @await Html.PartialAsync("Components/_Tooltip", "We recommend you leave this on. Once you're set up, we'll only send you one email per event.")
         </span>
 
-        <span class="ml-1 text-muted">Opt in to emails informing you of upcoming events</span>
+        <span class="ms-1 text-muted">Opt in to emails informing you of upcoming events</span>
     </div>
 }
 
@@ -88,7 +88,7 @@
         
         @if (!string.IsNullOrEmpty(chapterProperty?.Subtitle))
         {
-            <span class="ml-1 text-muted">@chapterProperty.Subtitle</span>
+            <span class="ms-1 text-muted">@chapterProperty.Subtitle</span>
         }
 
         @if (chapterProperty?.DataType == DataType.DropDown)
