--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventInvitesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventInvitesContent.cshtml
@@ -36,7 +36,7 @@
         Send invites
     </button>
 </form>
-<p class="text-muted ml-1">
+<p class="text-muted ms-1">
     Emails are batched and sent to your admin email address with members included on BCC.
     You will receive 1 email per batch as the admin recipient + your member invite.
 </p>
