--- a/ODK.Web.Razor/Views/Shared/Members/_MemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_MemberContent.cshtml
@@ -1,7 +1,8 @@
 ﻿@using ODK.Services.Authentication
+@using ODK.Services.Members.ViewModels
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Members
-@model ODK.Web.Razor.Models.Members.MemberContentViewModel
+@model MemberPageViewModel
 
 @await Html.PartialAsync("Components/_AdminBar", new AdminBarViewModel
 {
@@ -22,7 +23,6 @@
         </div>
     </div>
     <div class="col-md-8 order-md-1">
-        @await Html.PartialAsync("Members/_MemberProfile", 
-            new MemberProfileViewModel(Model.Member, Model.Chapter))
+        @await Html.PartialAsync("Members/_MemberProfile", Model)
     </div>    
 </div>
